stylesheets/default.css
/* ... */
@media only screen and (max-width:568px) and (max-height:320px) and (orientation:landscape){
	header div.intro h1 small {font-size:16px;width:80%;margin-left:-10%;bottom:-15%;}
}

@media only screen and (min-width:375px) and (max-width:667px){	
	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
	
	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:80%;}
	header div img {width:100%;height:auto;position:absolute;bottom:-50%;left:2%;}
	header div.intro.col {width:100% !important;float:left;height:40%;margin-top:0;}
	header div.col {margin-top:115%;}
}
/*Animations*/
a.bounce {
    -webkit-animation-duration: 2s;
            animation-duration: 2s;
	-webkit-animation-delay: 4s;
			animation-delay: 4s;
	-webkit-animation-iteration-count: infinite;
			animation-iteration-count: infinite;
}

/* Chrome, Safari, Opera */
@-webkit-keyframes loaderSpin {
    0%   {
	   	-ms-transform: rotate(0deg); /* IE 9 */
	    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
	    transform: rotate(0deg);
    }
    100% {
    		   	-ms-transform: rotate(360deg); /* IE 9 */
	    -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
	    transform: rotate(360deg);
	}
}

/* Standard syntax */
@keyframes loaderSpin {
    0%   {
	   	-ms-transform: rotate(0deg); /* IE 9 */
	    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
	    transform: rotate(0deg);
    }
    100% {
    	-ms-transform: rotate(360deg); /* IE 9 */
	    -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
	    transform: rotate(360deg);
	}
}

